package TicTacToe.Version1;

public enum GameStatus {
    IN_PROGRESS,
    DRAW,
    WIN
}
